# check-python

./: .gitignore  README.md  main.py  pyproject.toml
mbook/: div_1.py  div_2.py  div_3 copy.py  div_3.py  div_4.py
pylib/: __init__.py  fns.py
