[project]
name = "check-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "loguru>=0.7.3",
    "marimo[recommended]>=0.18.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyzmq>=27.1.0",
    "typing>=3.10.0.0",
]

[tool.marimo.display]
default_width = "full"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pylib"]

[dependency-groups]
dev = [

]
